# textual-utils

./: .gitignore  README.md  pyproject.toml
src/textual_utils/: __init__.py  about_header_icon.py  about_screen.tcss  app_metadata.py  bindings.py  confirm_screen.tcss  screens.py  screens.tcss  setting_row.py  translations.py
textual_utils/: __init__.py  about_header_icon.py  i18n.py  screens.py
