[project]
name = "textual-utils"
version = "1.0.9"
description = "Utilities for use with the Textual package"
authors = [{ name = "Rafal Padkowski", email = "rafaelp@poczta.onet.pl" }]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "textual>=2.1.2",
    "tomli-w>=1.2.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
