[project]
name = "textual-utils"
version = "2.3.0"
description = "Utilities for use with the Textual package"
authors = [{ name = "Rafal Padkowski", email = "rafaelp@poczta.onet.pl" }]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "textual>=6.6.0",
    "tilsit-config>=1.0.1",
    "tilsit-i18n>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
